test/sema/typeck/literal/unary-minus-byte-4.out
error: cannot use `-` with UInt8
--> unary-minus-byte-4.dora:1:31
 | fn main() { let _m1: UInt8 = -1u8; }
                                 ~~~
 | 
1 error found.
