test/sema/typeck/literal/unary-minus-byte-4.dora
fn main() { let _m1: UInt8 = -1u8; }
